// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SimpleForm with 2 TextInput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-24 MuiInputLabel-root-19 MuiInputLabel-formControl-20 MuiInputLabel-animated-23"
      data-shrink="false"
    >
      test
    </label>
    <div
      class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-13"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-24 MuiInputLabel-root-19 MuiInputLabel-formControl-20 MuiInputLabel-animated-23"
      data-shrink="false"
    >
      test2
    </label>
    <div
      class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-13"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-45 MuiButton-root-30"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-31"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-48"
    />
  </button>
</form>
`;

exports[`Storyshots SimpleForm with Checkbox 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-24"
    >
      test
    </label>
    <div
      class="MuiFormGroup-root-55 MuiFormGroup-row-56"
    >
      <label
        class="MuiFormControlLabel-root-57"
      >
        <span
          class="MuiButtonBase-root-45 MuiIconButton-root-70 MuiSwitchBase-root-65 MuiSwitchBase-default-67 MuiCheckbox-default-60"
        >
          <span
            class="MuiIconButton-label-75"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-76"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-66"
              id="um"
              type="checkbox"
              value="um"
            />
          </span>
          <span
            class="MuiTouchRipple-root-48"
          />
        </span>
        <span
          class="MuiTypography-root-82 MuiTypography-body1-91 MuiFormControlLabel-label-59"
        >
          1
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root-57"
      >
        <span
          class="MuiButtonBase-root-45 MuiIconButton-root-70 MuiSwitchBase-root-65 MuiSwitchBase-default-67 MuiCheckbox-default-60"
        >
          <span
            class="MuiIconButton-label-75"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-76"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-66"
              id="dois"
              type="checkbox"
              value="dois"
            />
          </span>
          <span
            class="MuiTouchRipple-root-48"
          />
        </span>
        <span
          class="MuiTypography-root-82 MuiTypography-body1-91 MuiFormControlLabel-label-59"
        >
          2
        </span>
      </label>
    </div>
  </div>
  <button
    class="MuiButtonBase-root-45 MuiButton-root-30"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-31"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-48"
    />
  </button>
</form>
`;

exports[`Storyshots SimpleForm with Checkbox and Text Iput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-24"
    >
      test
    </label>
    <div
      class="MuiFormGroup-root-55 MuiFormGroup-row-56"
    >
      <label
        class="MuiFormControlLabel-root-57"
      >
        <span
          class="MuiButtonBase-root-45 MuiIconButton-root-70 MuiSwitchBase-root-65 MuiSwitchBase-default-67 MuiCheckbox-default-60"
        >
          <span
            class="MuiIconButton-label-75"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-76"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-66"
              id="um"
              type="checkbox"
              value="um"
            />
          </span>
          <span
            class="MuiTouchRipple-root-48"
          />
        </span>
        <span
          class="MuiTypography-root-82 MuiTypography-body1-91 MuiFormControlLabel-label-59"
        >
          1
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root-57"
      >
        <span
          class="MuiButtonBase-root-45 MuiIconButton-root-70 MuiSwitchBase-root-65 MuiSwitchBase-default-67 MuiCheckbox-default-60"
        >
          <span
            class="MuiIconButton-label-75"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-76"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              class="MuiSwitchBase-input-66"
              id="dois"
              type="checkbox"
              value="dois"
            />
          </span>
          <span
            class="MuiTouchRipple-root-48"
          />
        </span>
        <span
          class="MuiTypography-root-82 MuiTypography-body1-91 MuiFormControlLabel-label-59"
        >
          2
        </span>
      </label>
    </div>
  </div>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-24 MuiInputLabel-root-19 MuiInputLabel-formControl-20 MuiInputLabel-animated-23"
      data-shrink="false"
    >
      test2
    </label>
    <div
      class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-13"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-45 MuiButton-root-30"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-31"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-48"
    />
  </button>
</form>
`;

exports[`Storyshots SimpleForm with TextInput 1`] = `
<form>
  <div
    class="MuiFormControl-root-1"
  >
    <label
      class="MuiFormLabel-root-24 MuiInputLabel-root-19 MuiInputLabel-formControl-20 MuiInputLabel-animated-23"
      data-shrink="false"
    >
      test
    </label>
    <div
      class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="MuiInput-input-13"
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-45 MuiButton-root-30"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-31"
    >
      Submit
    </span>
    <span
      class="MuiTouchRipple-root-48"
    />
  </button>
</form>
`;
